--- a/redux-toolkit/package.json
+++ b/redux-toolkit/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3"
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "redux-logger": "^3.0.6"
   }
 }
